# telegram-notifier

./: .gitignore  .test.env  pyproject.toml
.github/actions/setup_py_env/: action.yml
.github/workflows/: master.yml  testing.yml
lib/: bot.py  techencalve_extract.py  test.py  utils.py
