[tool.poetry]
name = "reddit-bot"
version = "0.1.0"
description = ""
authors = ["laraib_sidd <laraib.sidd7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
aiofiles = "23.1.0"
aiogram = "3.1.1"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
APScheduler = "3.6.3"
async-timeout = "4.0.3"
attrs = "23.1.0"
CacheControl = "0.13.1"
cachetools = "4.2.2"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "41.0.5"
dnspython = "2.4.2"
firebase-admin = "6.2.0"
frozenlist = "1.4.0"
google-api-core = "2.13.0"
google-api-python-client = "2.107.0"
google-auth = "2.23.4"
google-auth-httplib2 = "0.1.1"
google-cloud-core = "2.3.3"
google-cloud-firestore = "2.13.1"
google-cloud-storage = "2.13.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.6.0"
googleapis-common-protos = "1.61.0"
grpcio = "1.59.2"
grpcio-status = "1.59.2"
httplib2 = "0.22.0"
idna = "3.4"
magic-filter = "1.0.12"
msgpack = "1.0.7"
multidict = "6.0.4"
praw = "7.7.1"
prawcore = "2.4.0"
proto-plus = "1.22.3"
protobuf = "4.25.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
PyJWT = "2.8.0"
pymongo = "4.6.0"
pyparsing = "3.1.1"
python-telegram = "0.18.0"
python-telegram-bot = "13.13"
pytz = "2023.3.post1"
requests = "2.31.0"
rsa = "4.9"
six = "1.16.0"
telegram-text = "0.1.2"
tornado = "6.3.3"
typing-extensions = "4.7.1"
tzlocal = "5.2"
update-checker = "0.18.0"
uritemplate = "4.1.1"
urllib3 = "2.0.7"
websocket-client = "1.6.4"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

