[tool.poetry]
name = "reddit-bot"
version = "0.1.0"
description = ""
authors = ["laraib_sidd <laraib.sidd7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
python-telegram-bot = "13.1"
pytz = "^2023.3.post1"
pymongo = "^4.6.0"
praw = "^7.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

